--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "core-js": "^2.4.1",
     "rxjs": "^5.4.1",
     "three": "^0.88.0",
+    "three-orbit-controls": "^82.1.0",
+    "three-stl-loader": "^1.0.6",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
@@ -32,7 +34,7 @@
     "@angular/language-service": "^4.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.110",
     "@types/three": "^0.84.33",
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.2",
