--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chart.js": "^2.7.2",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "material-design-icons": "^3.0.1",
     "rxjs": "^6.2.0",
     "three": "^0.88.0",
     "three-orbit-controls": "^82.1.0",
@@ -47,13 +48,13 @@
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
+    "karma": "^2.0.3",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
+    "protractor": "^5.3.2",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
     "typescript": "2.7.2"
