--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "material-design-icons": "^3.0.1",
     "rxjs": "^6.2.0",
     "three": "^0.88.0",
+    "three-full": "^8.0.0",
     "three-orbit-controls": "^82.1.0",
     "three-stl-loader": "^1.0.6",
     "zone.js": "^0.8.14"
